// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsAssetPageMain should correctly handle live streams 1`] = `
<DocumentFragment>
  <noscript />
  .c0 {
  margin: 0 auto;
  background: #FDFDFD;
  padding-bottom: 2rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c15 {
  display: grid;
  grid-column-gap: 1rem;
}

.c8 {
  grid-column: 1 / span 6;
}

.c7 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c11 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c9:last-child {
  padding-bottom: 1rem;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c12 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c12:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c12:focus,
.c12:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c14 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c18 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

.c17 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c4 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c3 {
  margin-bottom: 1.5rem;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c6 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c6 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c6 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c6 {
    padding: 0 1rem;
  }
}

@media (max-width:63rem) {
  .c13 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c13 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c13 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c16 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c16 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c16 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:80rem) {
  .c16 {
    grid-column: 1 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c19 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c19 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c19 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:80rem) {
  .c19 {
    grid-column: 1 / span 10;
  }
}

@media (max-width:80rem) {
  .c15 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c15 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (max-width:25rem) {
  .c8 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c8 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c8 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c8 {
    grid-column: 2 / span 4;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c8 {
    max-width: initial;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:63rem) {
  .c3 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

<main
    class="c0"
    role="main"
  >
    <div
      class="c1"
    >
      <a
        data-e2e="cpsAssetDummyLink"
        href="/pidgin/23248703"
      >
        Test MAP to MAP inline link
      </a>
    </div>
    <h1
      class="c2"
      id="content"
      tabindex="-1"
    >
      Ўзбек деҳқонининг косаси нега оқармайдиshort
    </h1>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <iframe
          allow="autoplay; fullscreen"
          allowfullscreen=""
          class="c5"
          src="https://www.test.bbc.co.uk/ws/av-embeds/cps/uzbek/sport-23248721/bbc_world_service_west_africa/ig"
          title="Media player"
        />
      </div>
    </div>
    <div
      class="c6"
    >
      <strong
        aria-hidden="true"
        class="c7"
      >
        Ўзбек деҳқонининг косаси нега оқармайдиshort
      </strong>
    </div>
    <div
      class="c8"
    >
      <time
        class="c9"
        datetime="2019-09-13"
      >
        13 Septemba 2019
      </time>
      <time
        class="c9"
        datetime="2019-11-06"
      >
        Mgbe ikpeazụ e tinyere ya ozi ọhụrụ 6 Nọvemba 2019
      </time>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        <b>
          Ўзбек деҳқонининг косаси нега оқармайди
        </b>
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        <b>
          Ўзбек деҳқонининг косаси нега оқармайди
        </b>
        <b>
           heading
        </b>
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        <i
          class="c11"
        >
          <b>
            Ўзбек деҳқонининг косаси нега оқармайди
          </b>
        </i>
        <i
          class="c11"
        >
          <b>
             heading
          </b>
        </i>
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        <b>
          Ўзбек деҳқонининг косаси нега оқармайди
        </b>
        <b>
           crosshead 
        </b>
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        Шу йил апрел ойида Ўзбекистон Президенти Ислом 
        <a
          class="c12"
          href="https://bbc.com/uzbek"
        >
          Каримов ўзининг
        </a>
         Москвага сафари мобайнида Россияга Туркия каби мамлакатлардан келмай қолган қишлоқ хўжалик маҳсулотлари ўрнини Ўзбекистон қоплаб беришга тайёр эканлигини айтганди.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        Шу вақтгача ҳам ўзбекистонлик деҳқонлар ўз маҳсулотларини хорижга олиб 
        <b>
          чиқишда турли муаммоларга юз тутиб
        </b>
         келишган, апрель ойида президент қарори билан "Ўзагроэкспорт" мева-сабзавот маҳсулотларини экспорт қилиш билан шуғулланадиган ташқи савдо компанияси ҳам ташкил қилинди.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        Ўз мева-сабзавотини Россияга олиб чиқишда бу компания ёрдамига умид қилган боғбонларнинг гилослари бузила бошлагани ҳақидаги хабарлар ҳам тарқалди..
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        Ҳозирда Ўзбекистонда айни пишиқчилик ва етиштирилган маҳсулот учун кенгроқ бозор топиш масаласи яна долзарб турар экан, мамлакат раҳбарининг сўзларидан сўнг вазият нақадар ўзгарган?
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        Би-би-си билан суҳбатда иқтисодий таҳлилчи Анвар Ҳусаиновнинг айтишича, юқори минбардан айтилган сўзларга қарамай, қишлоқ хўжалиги маҳсулотларини хорижга, жумладан Россия бозорига олиб чиқишда ҳануз кўплаб муаммолар мавжуд.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        "Албатта ўтган йилларга қараганда маҳсулотлар экспорти анча кўпайган. Россиядан юк машиналари келиб, тўғридан-тўғри деҳқонлардан нақд пулга 
      </p>
    </div>
    <div
      class="c13"
    >
      <figure
        class="c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16"
          >
            <div
              class="c17"
            >
              <div
                class="lazyload-placeholder"
              />
              <noscript />
              <p
                class="c18"
                role="text"
              >
                <span
                  class="c2"
                >
                  Ebe foto si 
                </span>
                <span
                  lang="en-GB"
                >
                  AFP
                </span>
              </p>
            </div>
          </div>
          <div
            class="c19"
          />
        </div>
      </figure>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        Ўзбек деҳқонининг косаси нега оқармайди transmission info 
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c10"
      >
        Ўзбек деҳқонининг косаси нега оқармайди footer 
      </p>
    </div>
  </main>
</DocumentFragment>
`;

exports[`CpsAssetPageMain should match snapshot for MAP 1`] = `
<html
  dir="ltr"
  lang="pcm"
>
  <head>
    <title>
      Nigerian man Emeka Nelson don produce generator wey dey use only water - BBC News Ìgbò
    </title>
    <link
      href="https://www.test.bbc.com/pidgin/tori-49450859"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.co.uk/pidgin/tori-49450859"
      hreflang="ig"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.co.uk/pidgin/tori-49450859.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/igbo/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News Ìgbò"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News Ìgbò"
      name="application-name"
    />
    <meta
      content="Emeka Nelson don find di solution to di light palava wey dey worry for Nigeria nad oda parts of Africa as im produce generator wey dey run on water."
      name="description"
    />
    <meta
      content="100004154058350"
      name="fb:admins"
    />
    <meta
      content="1609039196070050"
      name="fb:app_id"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="Emeka Nelson don find di solution to di light palava wey dey worry for Nigeria nad oda parts of Africa as im produce generator wey dey run on water."
      name="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"
      name="og:image"
    />
    <meta
      content="BBC News Ìgbò"
      name="og:image:alt"
    />
    <meta
      content="ig"
      name="og:locale"
    />
    <meta
      content="BBC News Ìgbò"
      name="og:site_name"
    />
    <meta
      content="Nigerian man Emeka Nelson don produce generator wey dey use only water - BBC News Ìgbò"
      name="og:title"
    />
    <meta
      content="website"
      name="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pidgin/tori-49450859"
      name="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@BBCNews"
      name="twitter:creator"
    />
    <meta
      content="Emeka Nelson don find di solution to di light palava wey dey worry for Nigeria nad oda parts of Africa as im produce generator wey dey run on water."
      name="twitter:description"
    />
    <meta
      content="BBC News Ìgbò"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"
      name="twitter:image:src"
    />
    <meta
      content="@BBCNews"
      name="twitter:site"
    />
    <meta
      content="Nigerian man Emeka Nelson don produce generator wey dey use only water - BBC News Ìgbò"
      name="twitter:title"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"https://www.test.bbc.com/pidgin/tori-49450859","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Ìgbò","publishingPrinciples":"https://www.bbc.com/news/help-41670342","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png","mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/pidgin/tori-49450859","name":"Nigerian man Emeka Nelson don produce generator wey dey use only water"}}
    </script>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"VideoObject","name":"Nigerian man produce generator wey dey run on water","description":"Nigerian man produce generator wey dey run on water","duration":139,"thumbnailUrl":"https://ichef.bbci.co.uk/images/ic/1024x576/p07lgnlf.jpg","uploadDate":1566573314}]}}
    </script>
  </head>
  <body>
    .c0 {
  margin: 0 auto;
  background: #FDFDFD;
  padding-bottom: 2rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c8 {
  grid-column: 1 / span 6;
}

.c7 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c9:last-child {
  padding-bottom: 1rem;
}

.c29 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c10 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c23 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c4 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c3 {
  margin-bottom: 1.5rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c17 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #222222;
  background-color: #FFFFFF;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c12 {
  position: relative;
  margin-top: 2rem;
}

.c14 {
  margin: 0;
  padding: 0;
}

.c19 {
  border-bottom: 0.0625rem solid #F2F2F2;
  padding: 0.5rem 0 1rem;
}

.c19:first-child {
  padding-top: 0;
}

.c19:last-child {
  padding-bottom: 0;
  border: none;
}

.c18 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c20 {
  position: relative;
}

.c21 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c22 {
  position: relative;
}

.c26 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c28 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c25 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c27 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c27:hover,
.c27:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c27:visited {
  color: #6E6E73;
}

.c11 {
  z-index: 0;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c6 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c6 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c6 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c6 {
    padding: 0 1rem;
  }
}

@media (max-width:25rem) {
  .c8 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c8 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c8 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c8 {
    grid-column: 2 / span 4;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c8 {
    max-width: initial;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c9 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c9 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c29 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c29 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:63rem) {
  .c3 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c13 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    margin-top: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c19 {
    padding: 1.5rem 0 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c19:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c19:first-child {
    padding-top: 1.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c20 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c21 {
    width: 33.33%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c21 {
    display: block;
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:25rem) {
  .c24 {
    position: absolute;
    bottom: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c26 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c26 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c28 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c28 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c28 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c25 {
    width: 66.67%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c25 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@media (max-width:63rem) {
  .c11 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c11 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c11 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c11 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c11 {
    padding: 0 1rem;
  }
}

<div>
      <noscript />
      <main
        class="c0"
        role="main"
      >
        <div
          class="c1"
        >
          <a
            data-e2e="cpsAssetDummyLink"
            href="/pidgin/23248703"
          >
            Test MAP to MAP inline link
          </a>
        </div>
        <h1
          class="c2"
          id="content"
          tabindex="-1"
        >
          Nigerian man Emeka Nelson don produce generator wey dey use only water
        </h1>
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <iframe
              allow="autoplay; fullscreen"
              allowfullscreen=""
              class="c5"
              src="https://www.test.bbc.co.uk/ws/av-embeds/cps/pidgin/tori-49450859/p07lg239/ig"
              title="Media player"
            />
          </div>
        </div>
        <div
          class="c6"
        >
          <strong
            aria-hidden="true"
            class="c7"
          >
            Nigerian man Emeka Nelson don produce generator wey dey use only water
          </strong>
        </div>
        <div
          class="c8"
        >
          <time
            class="c9"
            datetime="2019-08-23"
          >
            23 Ọgọọst 2019
          </time>
          <time
            class="c9"
            datetime="2019-08-23"
          >
            Mgbe ikpeazụ e tinyere ya ozi ọhụrụ 
            23 Ọgọọst 2019
          </time>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            <b>
              As Nigeria authorities still dey try to find solution to light mata, e be like say 26-year old Emeka Nelson don find di solution afta im produce generator wey go dey run on water
            </b>
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            Wetin ginger Emeka na im friend wey smoke from generator kill.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            BBC carri waka go Awka Anambra state inside South-east Nigeria go see di ogbonge invention wey Nelson produce.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            Nelson wey no be certified engineer struggle to read for elementary school, work as house help for di age of 5, and no get any university education.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            Wen we go im house, e dey full with Structural drawings and designs wey e pin for wall and na so e dey take im time dey study di drawing.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            For 16 years, e dey focus to make im dream turn to something real-dat na to make generator wey go run on water.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            Most of di material wey Nelson take arrange im generator na from  scrap.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            Di first generator wey im do explode wen e test am. Dis come make am dey doubt di project but afta plenti years of struggle e come get am right.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            Nelson says im generator get maximum output capacity of 1,000 watts and di voltage dey fluctuate between 220 and 240.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            E say one litre of clean water fit power di generator for 6 hours, and e no go bring out smoke like oda generators, e dey environment friendly.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c10"
          >
            Dis ogbonge inventor add say im dream na for di generator to dey for millions of homes all ova di world.
          </p>
        </div>
        <div
          aria-labelledby="related-content-heading"
          class="c11"
        >
          <div
            class="c12"
          >
            <div
              class="c13"
            />
            <h2
              class="c14"
            >
              <div
                class="c15"
              >
                <span
                  class="c16"
                >
                  <span
                    class="c17"
                    dir="ltr"
                    id="related-content-heading"
                  >
                    Ihe ndị ọzọ n'akụkọ a
                  </span>
                </span>
              </div>
            </h2>
          </div>
          <ul
            class="c18"
            role="list"
          >
            <li
              class="c19"
              role="listitem"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <div
                    class="c22"
                  >
                    <div
                      class="c23"
                    >
                      <div
                        class="lazyload-placeholder"
                      />
                    </div>
                    <div
                      class="c24"
                    />
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <h3
                    class="c26"
                  >
                    <a
                      class="c27"
                      href="/pidgin/44508901"
                    >
                      <span
                        role="text"
                      >
                        <span
                          class="c2"
                        >
                          , 
                        </span>
                        <span>
                          Meet boys who dey convert cassava to electricity
                        </span>
                      </span>
                    </a>
                  </h3>
                  <p
                    class="c28"
                  >
                    James den Kwesi Ansah want convert most of Ghana's cassava waste into cheap electricity supply for schools, hospitals den villages.
                  </p>
                  <time
                    class="c29"
                    datetime="1970-01-18"
                  >
                    18 Jenụwarị 1970
                  </time>
                </div>
              </div>
            </li>
            <li
              class="c19"
              role="listitem"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <div
                    class="c22"
                  >
                    <div
                      class="c23"
                    >
                      <div
                        class="lazyload-placeholder"
                      />
                    </div>
                    <div
                      class="c24"
                    />
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <h3
                    class="c26"
                  >
                    <a
                      class="c27"
                      href="/pidgin/tori-46975713"
                    >
                      How light companies dey use estimated billing show Nigerians pepper
                    </a>
                  </h3>
                  <p
                    class="c28"
                  >
                    Lawmakers for Nigeria wan make am crime for light companies to use guesswork give customer estimated bill.
                  </p>
                  <time
                    class="c29"
                    datetime="1970-01-18"
                  >
                    18 Jenụwarị 1970
                  </time>
                </div>
              </div>
            </li>
            <li
              class="c19"
              role="listitem"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <div
                    class="c22"
                  >
                    <div
                      class="c23"
                    >
                      <div
                        class="lazyload-placeholder"
                      />
                    </div>
                    <div
                      class="c24"
                    />
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <h3
                    class="c26"
                  >
                    <a
                      class="c27"
                      href="/pidgin/tori-42494678"
                    >
                      Nigeria: Wetin 5,222 megawatts electric fit do?
                    </a>
                  </h3>
                  <p
                    class="c28"
                  >
                    Di Transmission Company of Nigeria and di vice-president office carry tori come outside say electric power wey di country produce don increase pass before as e reach 5,222 megawatts dis December.
                  </p>
                  <time
                    class="c29"
                    datetime="1970-01-18"
                  >
                    18 Jenụwarị 1970
                  </time>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </main>
    </div>
  </body>
</html>
`;

exports[`CpsAssetPageMain should match snapshot for STY 1`] = `
.c0 {
  margin: 0 auto;
  background: #FDFDFD;
  padding-bottom: 2rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c6 {
  display: grid;
  grid-column-gap: 1rem;
}

.c14 {
  grid-column: 1 / span 6;
}

.c3 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c22 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

.c18 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c15 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c15:last-child {
  padding-bottom: 1rem;
}

.c16 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c17 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c17:focus,
.c17:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c5 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c11 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c10 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

.c13 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c13 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c13 > p:last-child {
  padding-bottom: 0;
}

.c13 i {
  font-style: normal;
}

.c8 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c9 {
  display: block;
  width: 100%;
  visibility: visible;
  -webkit-animation: eMLfYp 0.2s linear;
  animation: eMLfYp 0.2s linear;
  -webkit-transition: visibility 0.2s linear;
  transition: visibility 0.2s linear;
}

.c20 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c19 {
  margin-bottom: 1.5rem;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c29 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #222222;
  background-color: #FFFFFF;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c24 {
  position: relative;
  margin-top: 2rem;
}

.c26 {
  margin: 0;
  padding: 0;
}

.c30 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c23 {
  z-index: 0;
}

.c21 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c2 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c2 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c2 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c2 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
  }
}

@media (max-width:63rem) {
  .c4 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c4 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c7 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c7 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c7 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:80rem) {
  .c7 {
    grid-column: 1 / span 12;
  }
}

@media (max-width:37.4375rem) {
  .c12 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c12 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c12 {
    grid-column: 1 / span 5;
  }
}

@media (min-width:80rem) {
  .c12 {
    grid-column: 1 / span 10;
  }
}

@media (max-width:80rem) {
  .c6 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:80rem) {
  .c6 {
    grid-template-columns: repeat(12,1fr);
  }
}

@media (max-width:25rem) {
  .c14 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c14 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c14 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c14 {
    grid-column: 2 / span 4;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c14 {
    max-width: initial;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c22 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c22 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c22 {
    padding-top: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c13 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c13 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c13 {
    padding: 0.5rem 0 0;
  }
}

@media (max-width:63rem) {
  .c19 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c19 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c19 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c19 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c19 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c28 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c29 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c29 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c29 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c29 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c25 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c25 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c24 {
    margin-top: 1.5rem;
  }
}

@media (max-width:63rem) {
  .c23 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c23 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c23 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c23 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c23 {
    padding: 0 1rem;
  }
}

<html
  dir="ltr"
  lang="ig"
>
  <head>
    <title>
      STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk? - BBC News Ìgbò
    </title>
    <link
      href="https://www.test.bbc.com/igbo/afirika-23252735"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.co.uk/igbo/afirika-23252735"
      hreflang="ig"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.co.uk/igbo/afirika-23252735.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/igbo/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News Ìgbò"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News Ìgbò"
      name="application-name"
    />
    <meta
      content="This is a test asset used in Simorgh, please do not edit it without asking."
      name="description"
    />
    <meta
      content="100004154058350"
      name="fb:admins"
    />
    <meta
      content="1609039196070050"
      name="fb:app_id"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/igbo/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="This is a test asset used in Simorgh, please do not edit it without asking."
      name="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"
      name="og:image"
    />
    <meta
      content="BBC News Ìgbò"
      name="og:image:alt"
    />
    <meta
      content="ig"
      name="og:locale"
    />
    <meta
      content="BBC News Ìgbò"
      name="og:site_name"
    />
    <meta
      content="STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk? - BBC News Ìgbò"
      name="og:title"
    />
    <meta
      content="website"
      name="og:type"
    />
    <meta
      content="https://www.test.bbc.com/igbo/afirika-23252735"
      name="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@BBCNews"
      name="twitter:creator"
    />
    <meta
      content="This is a test asset used in Simorgh, please do not edit it without asking."
      name="twitter:description"
    />
    <meta
      content="BBC News Ìgbò"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"
      name="twitter:image:src"
    />
    <meta
      content="@BBCNews"
      name="twitter:site"
    />
    <meta
      content="STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk? - BBC News Ìgbò"
      name="twitter:title"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"https://www.test.bbc.com/igbo/afirika-23252735","publisher":{"@type":"NewsMediaOrganization","name":"BBC News Ìgbò","publishingPrinciples":"https://www.bbc.com/news/help-41670342","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/igbo.png","mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/igbo/afirika-23252735","name":"STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk?"}}
    </script>
    <script
      type="application/ld+json"
    >
      {"video":{"@list":[{"@type":"AudioObject","name":"Подкаст \\"Разговоры с арбитром\\": чемпионский парад \\"Ливерпуля\\"","description":"Сева Бойко рассказывает о том, как в Ливерпуле отметили победу в Лиге чемпионов.","duration":1961,"thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01mr7dp.jpg","uploadDate":1559819809000}]}}
    </script>
  </head>
  <body>
    <div>
      <main
        class="c0"
        role="main"
      >
        <div
          class="c1"
        >
          <a
            data-e2e="cpsAssetDummyLink"
            href="/pidgin/23248703"
          >
            Test MAP to MAP inline link
          </a>
        </div>
        <div
          class="c2"
        >
          <h1
            class="c3"
            id="content"
            tabindex="-1"
          >
            STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk?
          </h1>
        </div>
        <div
          class="c4"
        >
          <figure
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c7"
              >
                <div
                  class="c8"
                >
                  <img
                    alt="Some people at the NTA awards"
                    class="c9"
                    src="https://ichef.bbci.co.uk/news/640/cpsdevpb/6ACE/test/_63724372_gettyimages-1098075358.jpg"
                    srcset="https://ichef.bbci.co.uk/news/240/cpsdevpb/6ACE/test/_63724372_gettyimages-1098075358.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsdevpb/6ACE/test/_63724372_gettyimages-1098075358.jpg 320w, https://ichef.bbci.co.uk/news/480/cpsdevpb/6ACE/test/_63724372_gettyimages-1098075358.jpg 480w, https://ichef.bbci.co.uk/news/624/cpsdevpb/6ACE/test/_63724372_gettyimages-1098075358.jpg 624w, https://ichef.bbci.co.uk/news/800/cpsdevpb/6ACE/test/_63724372_gettyimages-1098075358.jpg 800w"
                    width="976"
                  />
                  <p
                    class="c10"
                    role="text"
                  >
                    <span
                      class="c11"
                    >
                      Ebe foto si 
                    </span>
                    <span
                      lang="en-GB"
                    >
                      Joe Maher
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="c12"
              >
                <figcaption
                  class="c13"
                >
                  <span
                    class="c11"
                  >
                    Nkọwa foto 
                  </span>
                  <p>
                    Some people went to the NTA awards recently.
                  </p>
                </figcaption>
              </div>
            </div>
          </figure>
        </div>
        <div
          class="c14"
        >
          <time
            class="c15"
            datetime="2019-10-23"
          >
            23 Ọktọba 2019
          </time>
          <time
            class="c15"
            datetime="2019-10-23"
          >
            Mgbe ikpeazụ e tinyere ya ozi ọhụrụ 
            23 Ọktọba 2019
          </time>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            <b>
               This is introduction text, it should be bold by default, but also support 
            </b>
            <a
              class="c17"
              href="https://bbc.com/pidgin/23248703"
            >
              inline links
            </a>
            <b>
               to other pages.
            </b>
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            <i
              class="c18"
            >
              <b>
                This is a subheadline! that has 
              </b>
            </i>
            <a
              class="c17"
              href="https://bbc.com/pidgin/23248703"
            >
              a link
            </a>
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            Feta the big cheese macaroni cheese. 
            <a
              class="c17"
              href="https://bbc.com/pidgin/23248703"
            >
              Caerphilly danish fontina
            </a>
             queso blue castello fromage frais when the cheese comes out everybody's happy cheese triangles port-salut. Cheese slices stinking bishop pecorino cottage cheese cheese and biscuits cheese and wine chalk and cheese cream cheese. 
            <b>
              Cow cheeseburger
            </b>
             stilton emmental.
          </p>
        </div>
        <div
          class="c4"
        >
          <figure
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c7"
              >
                <div
                  class="c8"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                  <noscript />
                  <p
                    class="c10"
                    role="text"
                  >
                    <span
                      class="c11"
                    >
                      Ebe foto si 
                    </span>
                    <span
                      lang="en-GB"
                    >
                      Joe Maher
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="c12"
              />
            </div>
          </figure>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            <b>
              Start of localised text
            </b>
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            Minista nọ n'isi ụlọọrụ ahụ bụ Hadi Sirika sị na ya agaghị atụrụ ndị mmadụ asị na ya gaghaị arụcha ya bụ ọdọụgbọelụ na Disemba dịka ha kwuburu mana ya ga-eburu isi ụlọọrụ ya ga-gwunye n'Enugu ịhụ na ha rụchara n'Apreelụ.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            <b>
              End of localised text
            </b>
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            Rubber cheese macaroni 
            <i
              class="c18"
            >
              cheese cottage cheese
            </i>
            . Caerphilly gouda ricotta st. agur blue cheese cheese strings taleggio feta say cheese. The big cheese cheeseburger fondue dolcelatte fromage frais chalk and cheese cheese slices cheddar. Airedale macaroni cheese cheese strings fromage frais.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            Cauliflower cheese bocconcini hard cheese. Port-salut ricotta rubber cheese pecorino queso say cheese danish fontina parmesan. Port-salut lancashire pecorino say cheese stilton jarlsberg when the cheese comes out everybody's happy chalk and cheese. Squirty cheese cheese triangles swiss blue castello fromage mozzarella macaroni cheese cottage cheese. Chalk and cheese parmesan lancashire fondue.
          </p>
        </div>
        <div
          class="c19"
        >
          <div
            class="c20"
          >
            <iframe
              allow="autoplay; fullscreen"
              allowfullscreen=""
              class="c21"
              src="https://www.test.bbc.co.uk/ws/av-embeds/cps/igbo/afirika-23252735/p01mr6r9/ig"
              title="Media player"
            />
          </div>
        </div>
        <div
          class="c1"
        >
          <h2
            class="c22"
            id="This-is-a-heading"
            tabindex="-1"
          >
            This is a heading!
          </h2>
        </div>
        <div
          class="c1"
        >
          <h2
            class="c22"
            id="This-is-a-subheading"
            tabindex="-1"
          >
            This is a subheading!
          </h2>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            Squirty cheese dolcelatte say cheese. Brie cut the cheese fondue cow queso cheese on toast dolcelatte chalk and cheese. Queso roquefort manchego pecorino cheese strings manchego melted cheese halloumi. Cream cheese when the cheese comes out everybody's happy rubber cheese macaroni cheese blue castello cheeseburger caerphilly lancashire. Fondue blue castello.
          </p>
        </div>
        <div
          class="c1"
        >
          <h2
            class="c22"
            id="This-is-a-crosshead"
            tabindex="-1"
          >
            This is a crosshead!
          </h2>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            Brie parmesan camembert de normandie. Cottage cheese mozzarella cheesy grin red leicester hard cheese cheesy feet taleggio ricotta. Melted cheese say cheese cut the cheese brie cheese and biscuits cheese slices boursin squirty cheese. Say cheese camembert de normandie.
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            <a
              aria-label="This is an external link to google!, Site na mpụta"
              class="c17"
              href="https://www.google.com/"
            >
              This is an external link to google!
            </a>
          </p>
        </div>
        <div
          class="c1"
        >
          <p
            class="c16"
          >
            Cheese strings stilton cheesy feet. Cheese strings fondue cow fromage edam halloumi cut the cheese cream cheese. Melted cheese brie rubber cheese parmesan cut the cheese queso st. agur blue cheese dolcelatte. Port-salut croque monsieur cheese and wine cheese triangles cheesy grin.
          </p>
        </div>
        <div
          aria-labelledby="related-content-heading"
          class="c23"
        >
          <div
            class="c24"
          >
            <div
              class="c25"
            />
            <h2
              class="c26"
            >
              <div
                class="c27"
              >
                <span
                  class="c28"
                >
                  <span
                    class="c29"
                    dir="ltr"
                    id="related-content-heading"
                  >
                    Ihe ndị ọzọ n'akụkọ a
                  </span>
                </span>
              </div>
            </h2>
          </div>
          <ul
            class="c30"
            role="list"
          />
        </div>
      </main>
    </div>
  </body>
</html>
`;

exports[`CpsAssetPageMain should not show the pop-out timestamp when allowDateStamp is false 1`] = `
<DocumentFragment>
  <noscript />
  .c0 {
  margin: 0 auto;
  background: #FDFDFD;
  padding-bottom: 2rem;
}

.c1 {
  grid-column: 1 / span 6;
}

.c7 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c27 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c21 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c4 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c3 {
  margin-bottom: 1.5rem;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c15 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #222222;
  background-color: #FFFFFF;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c10 {
  position: relative;
  margin-top: 2rem;
}

.c12 {
  margin: 0;
  padding: 0;
}

.c17 {
  border-bottom: 0.0625rem solid #F2F2F2;
  padding: 0.5rem 0 1rem;
}

.c17:first-child {
  padding-top: 0;
}

.c17:last-child {
  padding-bottom: 0;
  border: none;
}

.c16 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c18 {
  position: relative;
}

.c19 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c20 {
  position: relative;
}

.c24 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c26 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

.c23 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c25 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c25:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c25:hover,
.c25:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c25:visited {
  color: #6E6E73;
}

.c9 {
  z-index: 0;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

@media (max-width:37.4375rem) {
  .c0 {
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    grid-column-gap: 1rem;
  }
}

@media (max-width:62.9375rem) {
  .c0 {
    grid-template-columns: repeat(6,1fr);
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(8,minmax(0,6.75rem)) 1fr;
    max-width: 45.5rem;
  }
}

@media (min-width:80rem) {
  .c0 {
    grid-template-columns: 1fr repeat(20,minmax(0,2.95rem)) 1fr;
    max-width: 46.4rem;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    max-width: initial;
    margin: initial;
  }
}

@media (max-width:25rem) {
  .c1 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c1 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c1 {
    grid-column: 1 / span 5;
    max-width: 83.33%;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c1 {
    grid-column: 3 / span 5;
    max-width: 37.75rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    grid-column: 6 / span 10;
    max-width: 38.5rem;
  }
}

@supports (display:grid) {
  .c1 {
    max-width: initial;
  }
}

@media (max-width:63rem) {
  .c6 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c6 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c6 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c6 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c6 {
    padding: 0 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c27 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c27 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (max-width:63rem) {
  .c3 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c3 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c3 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c3 {
    padding: 0 1rem;
  }
}

@media (min-width:37.5rem) {
  .c14 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c11 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c10 {
    margin-top: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c17 {
    padding: 1.5rem 0 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c17:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c17:first-child {
    padding-top: 1.5rem;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c18 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:80rem) {
  .c19 {
    width: 33.33%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c19 {
    display: block;
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:25rem) {
  .c22 {
    position: absolute;
    bottom: 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c24 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c24 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c26 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c26 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width:37.4375rem) {
  .c26 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:37.5rem) {
  .c23 {
    padding: 0 1rem;
  }
}

@media (min-width:80rem) {
  .c23 {
    width: 66.67%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c23 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@media (max-width:63rem) {
  .c9 {
    grid-column: 1 / span 6;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c9 {
    grid-column: 3 / span 6;
  }
}

@media (min-width:80rem) {
  .c9 {
    grid-column: 6 / span 12;
  }
}

@media (max-width:25rem) {
  .c9 {
    padding: 0 0.5rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c9 {
    padding: 0 1rem;
  }
}

<main
    class="c0"
    role="main"
  >
    <div
      class="c1"
    >
      <a
        data-e2e="cpsAssetDummyLink"
        href="/pidgin/23248703"
      >
        Test MAP to MAP inline link
      </a>
    </div>
    <h1
      class="c2"
      id="content"
      tabindex="-1"
    >
      Nigerian man Emeka Nelson don produce generator wey dey use only water
    </h1>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <iframe
          allow="autoplay; fullscreen"
          allowfullscreen=""
          class="c5"
          src="https://www.test.bbc.co.uk/ws/av-embeds/cps/pidgin/tori-49450859/p07lg239/ig"
          title="Media player"
        />
      </div>
    </div>
    <div
      class="c6"
    >
      <strong
        aria-hidden="true"
        class="c7"
      >
        Nigerian man Emeka Nelson don produce generator wey dey use only water
      </strong>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        <b>
          As Nigeria authorities still dey try to find solution to light mata, e be like say 26-year old Emeka Nelson don find di solution afta im produce generator wey go dey run on water
        </b>
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        Wetin ginger Emeka na im friend wey smoke from generator kill.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        BBC carri waka go Awka Anambra state inside South-east Nigeria go see di ogbonge invention wey Nelson produce.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        Nelson wey no be certified engineer struggle to read for elementary school, work as house help for di age of 5, and no get any university education.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        Wen we go im house, e dey full with Structural drawings and designs wey e pin for wall and na so e dey take im time dey study di drawing.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        For 16 years, e dey focus to make im dream turn to something real-dat na to make generator wey go run on water.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        Most of di material wey Nelson take arrange im generator na from  scrap.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        Di first generator wey im do explode wen e test am. Dis come make am dey doubt di project but afta plenti years of struggle e come get am right.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        Nelson says im generator get maximum output capacity of 1,000 watts and di voltage dey fluctuate between 220 and 240.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        E say one litre of clean water fit power di generator for 6 hours, and e no go bring out smoke like oda generators, e dey environment friendly.
      </p>
    </div>
    <div
      class="c1"
    >
      <p
        class="c8"
      >
        Dis ogbonge inventor add say im dream na for di generator to dey for millions of homes all ova di world.
      </p>
    </div>
    <div
      aria-labelledby="related-content-heading"
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        />
        <h2
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14"
            >
              <span
                class="c15"
                dir="ltr"
                id="related-content-heading"
              >
                Ihe ndị ọzọ n'akụkọ a
              </span>
            </span>
          </div>
        </h2>
      </div>
      <ul
        class="c16"
        role="list"
      >
        <li
          class="c17"
          role="listitem"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="c22"
                />
              </div>
            </div>
            <div
              class="c23"
            >
              <h3
                class="c24"
              >
                <a
                  class="c25"
                  href="/pidgin/44508901"
                >
                  <span
                    role="text"
                  >
                    <span
                      class="c2"
                    >
                      , 
                    </span>
                    <span>
                      Meet boys who dey convert cassava to electricity
                    </span>
                  </span>
                </a>
              </h3>
              <p
                class="c26"
              >
                James den Kwesi Ansah want convert most of Ghana's cassava waste into cheap electricity supply for schools, hospitals den villages.
              </p>
              <time
                class="c27"
                datetime="1970-01-18"
              >
                18 Jenụwarị 1970
              </time>
            </div>
          </div>
        </li>
        <li
          class="c17"
          role="listitem"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="c22"
                />
              </div>
            </div>
            <div
              class="c23"
            >
              <h3
                class="c24"
              >
                <a
                  class="c25"
                  href="/pidgin/tori-46975713"
                >
                  How light companies dey use estimated billing show Nigerians pepper
                </a>
              </h3>
              <p
                class="c26"
              >
                Lawmakers for Nigeria wan make am crime for light companies to use guesswork give customer estimated bill.
              </p>
              <time
                class="c27"
                datetime="1970-01-18"
              >
                18 Jenụwarị 1970
              </time>
            </div>
          </div>
        </li>
        <li
          class="c17"
          role="listitem"
        >
          <div
            class="c18"
          >
            <div
              class="c19"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="c22"
                />
              </div>
            </div>
            <div
              class="c23"
            >
              <h3
                class="c24"
              >
                <a
                  class="c25"
                  href="/pidgin/tori-42494678"
                >
                  Nigeria: Wetin 5,222 megawatts electric fit do?
                </a>
              </h3>
              <p
                class="c26"
              >
                Di Transmission Company of Nigeria and di vice-president office carry tori come outside say electric power wey di country produce don increase pass before as e reach 5,222 megawatts dis December.
              </p>
              <time
                class="c27"
                datetime="1970-01-18"
              >
                18 Jenụwarị 1970
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
